# PegQt

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
PegQt.app/Contents/: Info.plist
src/controller/: main.cpp  pegwindow.cpp  pegwindow.hpp
src/helper/: autoflushcout.hpp  global.hpp  methods.hpp  pch.hpp
src/model/: losewidget.cpp  losewidget.hpp  mainmenuwidget.cpp  mainmenuwidget.hpp  pegwidget.cpp  pegwidget.hpp  winwidget.cpp  winwidget.hpp
